5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1638_2449.log
== TEST (2019-04-08 17:09:02) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))
y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if(a == b == 0):
	msg = "Nao tem solucao"
else:
	msg = x
	msg = y

print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:10:00) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))
y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if(a == b == 0):
	msg = "Nao tem solucao"
msg = x
msg = y

print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:10:11) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))
y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if(a == b == 0):
	msg = "Nao tem solucao"


print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:10:43) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))
y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if(a == b == 0):
	msg = "Nao tem solucao"

msg = x
msg1 = y

print(msg)
print(msg1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:10:52) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))
y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if(a == b == 0):
	msg = "Nao tem solucao"

msg = x
msg1 = y

print(msg)
print(msg1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:11:23) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))
y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if(x = ((c*e) - (b*f)) / ((a*e) - (b*d)) == y = ((a*f) - (c*d)) / ((a*e) - (b*d)) == 0):
	msg = "Nao tem solucao"

msg = x
msg1 = y

print(msg)
print(msg1)
-- ERROR:
File "XXXX", line 11
    if(x = ((c*e) - (b*f)) / ((a*e) - (b*d)) == y = ((a*f) - (c*d)) / ((a*e) - (b*d)) == 0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:12:05) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))
y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if(((a*e) - (b*d)) ==   0 ):
	msg = "Nao tem solucao"

msg = x
msg1 = y

print(msg)
print(msg1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:26:53) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))
y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if( (a*e) - (b*d) == 0):
	msg = "Nao tem solucao"

msg = x
msg1 = y

print(msg)
print(msg1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 17:27:15) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))
y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if( (a*e) - (b*d) == 0):
	msg = "Nao tem solucao"

msg = x
msg1 = y

print(msg)
print(msg1)
-- EXECUTION TIME:
0.138461
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:27:20) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f)) / ((a*e) - (b*d))
y = ((a*f) - (c*d)) / ((a*e) - (b*d))

if( (a*e) - (b*d) == 0):
	msg = "Nao tem solucao"

msg = x
msg1 = y

print(msg)
print(msg1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c*e) - (b*f)) / ((a*e) - (b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:31:29) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f))  
y = ((a*f) - (c*d)) 
x1 = ((a*e) - (b*d))


if(x1 == 0)
	msg = "Nao tem solucao"
else:
	msg = x/x1
   msg1 = y/x1 
	
print(msg)
print(msg1)
-- ERROR:
File "XXXX", line 13
    if(x1 == 0)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:31:54) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f))  
y = ((a*f) - (c*d)) 
x1 = ((a*e) - (b*d))


if(x1 == 0):
	msg = "Nao tem solucao"
else:
	msg = x/x1
   msg1 = y/x1 
	
print(msg)
print(msg1)
-- ERROR:
File "XXXX", line 17
    msg1 = y/x1 
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:32:19) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f))  
y = ((a*f) - (c*d)) 
x1 = ((a*e) - (b*d))
x2 = ((a*e) - (b*d))

if(x1 == 0):
	msg = "Nao tem solucao"
else:
	msg = x/x1
   msg1 = y/x2
	
print(msg)
print(msg1)
-- ERROR:
File "XXXX", line 17
    msg1 = y/x2
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:32:50) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f))  
y = ((a*f) - (c*d)) 
x1 = ((a*e) - (b*d))
x2 = ((a*e) - (b*d))

if(x1 == 0):
	msg = "Nao tem solucao"
else:
	msg = x/x1
	
print(msg)
print(msg1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(msg1)
NameError: name 'msg1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:33:26) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f))  
y = ((a*f) - (c*d)) 
x1 = ((a*e) - (b*d))
x2 = ((a*e) - (b*d))

if(x1 == 0):
	msg = "Nao tem solucao"
else:
	msg = x/x1
	
	
print(msg)

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:33:36) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f))  
y = ((a*f) - (c*d)) 
x1 = ((a*e) - (b*d))
x2 = ((a*e) - (b*d))

if(x1 == 0):
	msg = "Nao tem solucao"
else:
	msg = x/x1
	
	
print(msg)

-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:34:05) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f))  
y = ((a*f) - (c*d)) 
x1 = ((a*e) - (b*d))
x2 = ((a*e) - (b*d))

if(x1 == 0):
	msg = "Nao tem solucao"
else:
	msg = x/x1
	msg1 = y/x1
	
print(msg)
print(msg1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(msg1)
NameError: name 'msg1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 17:34:12) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f))  
y = ((a*f) - (c*d)) 
x1 = ((a*e) - (b*d))
x2 = ((a*e) - (b*d))

if(x1 == 0):
	msg = "Nao tem solucao"
else:
	msg = x/x1
	msg1 = y/x1
	
print(msg)
print(msg1)
-- EXECUTION TIME:
0.137014
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 20, in <module>
    print(msg1)
NameError: name 'msg1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 17:34:13) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f))  
y = ((a*f) - (c*d)) 
x1 = ((a*e) - (b*d))
x2 = ((a*e) - (b*d))

if(x1 == 0):
	msg = "Nao tem solucao"
else:
	msg = x/x1
	msg1 = y/x1
	
print(msg)
print(msg1)
-- EXECUTION TIME:
0.135219
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 20, in <module>
    print(msg1)
NameError: name 'msg1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 17:34:13) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f))  
y = ((a*f) - (c*d)) 
x1 = ((a*e) - (b*d))
x2 = ((a*e) - (b*d))

if(x1 == 0):
	msg = "Nao tem solucao"
else:
	msg = x/x1
	msg1 = y/x1
	
print(msg)
print(msg1)
-- EXECUTION TIME:
0.172775
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 20, in <module>
    print(msg1)
NameError: name 'msg1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 17:34:14) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f))  
y = ((a*f) - (c*d)) 
x1 = ((a*e) - (b*d))
x2 = ((a*e) - (b*d))

if(x1 == 0):
	msg = "Nao tem solucao"
else:
	msg = x/x1
	msg1 = y/x1
	
print(msg)
print(msg1)
-- EXECUTION TIME:
0.133506
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 20, in <module>
    print(msg1)
NameError: name 'msg1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 17:34:14) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f))  
y = ((a*f) - (c*d)) 
x1 = ((a*e) - (b*d))
x2 = ((a*e) - (b*d))

if(x1 == 0):
	msg = "Nao tem solucao"
else:
	msg = x/x1
	msg1 = y/x1
	
print(msg)
print(msg1)
-- EXECUTION TIME:
0.28032
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 20, in <module>
    print(msg1)
NameError: name 'msg1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 17:34:14) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f))  
y = ((a*f) - (c*d)) 
x1 = ((a*e) - (b*d))
x2 = ((a*e) - (b*d))

if(x1 == 0):
	msg = "Nao tem solucao"
else:
	msg = x/x1
	msg1 = y/x1
	
print(msg)
print(msg1)
-- EXECUTION TIME:
0.224714
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 20, in <module>
    print(msg1)
NameError: name 'msg1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:34:14) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f))  
y = ((a*f) - (c*d)) 
x1 = ((a*e) - (b*d))
x2 = ((a*e) - (b*d))

if(x1 == 0):
	msg = "Nao tem solucao"
else:
	msg = x/x1
	msg1 = y/x1
	
print(msg)
print(msg1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print(msg1)
NameError: name 'msg1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 17:34:15) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f))  
y = ((a*f) - (c*d)) 
x1 = ((a*e) - (b*d))
x2 = ((a*e) - (b*d))

if(x1 == 0):
	msg = "Nao tem solucao"
else:
	msg = x/x1
	msg1 = y/x1
	
print(msg)
print(msg1)
-- EXECUTION TIME:
0.357555
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 20, in <module>
    print(msg1)
NameError: name 'msg1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 17:34:15) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f))  
y = ((a*f) - (c*d)) 
x1 = ((a*e) - (b*d))
x2 = ((a*e) - (b*d))

if(x1 == 0):
	msg = "Nao tem solucao"
else:
	msg = x/x1
	msg1 = y/x1
	
print(msg)
print(msg1)
-- EXECUTION TIME:
0.324492
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
-0.15705128205128205
1.1618589743589745
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:

-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
Coeficiente a:Coeficiente b:Coeficiente c:Coeficiente d:Coeficiente e:Coeficiente f:-0.15705128205128205
1.1618589743589745
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:34:56) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f))  
y = ((a*f) - (c*d)) 
x1 = ((a*e) - (b*d))
x2 = ((a*e) - (b*d))

if(x1 == 0):
	msg = "Nao tem solucao"
else:
	msg = x/x1
	msg1 = y/x1
	print(msg1)

print(msg)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 17:35:07) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f))  
y = ((a*f) - (c*d)) 
x1 = ((a*e) - (b*d))
x2 = ((a*e) - (b*d))

if(x1 == 0):
	msg = "Nao tem solucao"
else:
	msg = x/x1
	msg1 = y/x1
	print(msg1)

print(msg)
-- EXECUTION TIME:
0.127203
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
1.528301886792453
-0.22641509433962265
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
1.1618589743589745
-0.15705128205128205
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:35:31) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f))  
y = ((a*f) - (c*d)) 
x1 = ((a*e) - (b*d))
x2 = ((a*e) - (b*d))

if(x1 == 0):
	msg = "Nao tem solucao"
	print(msg)
else:
	msg = x/x1
	msg1 = y/x1
	print(msg)
	print(msg1)


-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 17:35:42) 
-- CODE:
a = float(input("Coeficiente a:"))
b = float(input("Coeficiente b:"))
c = float(input("Coeficiente c:"))
d = float(input("Coeficiente d:"))
e = float(input("Coeficiente e:"))
f = float(input("Coeficiente f:"))

x = ((c*e) - (b*f))  
y = ((a*f) - (c*d)) 
x1 = ((a*e) - (b*d))
x2 = ((a*e) - (b*d))

if(x1 == 0):
	msg = "Nao tem solucao"
	print(msg)
else:
	msg = x/x1
	msg1 = y/x1
	print(msg)
	print(msg1)


-- EXECUTION TIME:
0.148194
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
